--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{12377D72-7EF9-4CC9-91D3-A06ED10C5277}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ToExpando.Tests</RootNamespace>
-    <AssemblyName>ToExpando.Tests</AssemblyName>
+    <RootNamespace>XpandoLibrary.Tests</RootNamespace>
+    <AssemblyName>Xpando.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
