--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -53,7 +53,9 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests.cs" />
+    <Compile Include="CopyTests.cs" />
+    <Compile Include="ToExpandoTests.cs" />
+    <Compile Include="PropertyTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Library\Library.csproj">
